Update: Added some anlytics speed improvements
